syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.dclauth;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/dclauth/types";

message PendingAccount {
  string address = 1; 
  repeated string approvals = 2; 
  
}

