syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.dclauth;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/dclauth/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

message PendingAccountRevocation {
  option (gogoproto.goproto_stringer) = false;

  string address = 1  [(cosmos_proto.scalar) = "cosmos.AddressString"]; 
  repeated string approvals = 2  [(cosmos_proto.scalar) = "cosmos.AddressString"]; 
  
}

